# mathlib

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: release.yml
cmake/: InstallMathlib.cmake  MathlibConfig.cmake.in
include/mathlib/: math_operations.h
src/: math_operations.cpp
tests/: test_math.cpp
